# needle_dynamics_rayleigh_ritz

./: CMakeLists.txt  gmon.out  main.cpp  mass.txt  stiff.txt
include/: dynamics_math.h  euler_rotations.h  handle.h  input_trajectory.h  needle_animation.hpp  needle_properties.hpp  numerical_integration.hpp  post_processing_rr.hpp  rayleigh_ritz_beam.h  state.h  system_rayleigh_ritz.h  timer.hpp
libs/: CMakeLists.txt
libs/animation/: CMakeLists.txt  animation.h
libs/animation/configuration/: root_directory.h.in
libs/animation/include/: callback_handler.h  callback_setter.h  camera.h  display.h  filesystem.h  indexed_model.h  mesh.h  obj_loader.h  root_directory.h  shader.h  texture.h  transform.h
libs/animation/libs/: CMakeLists.txt
libs/animation/libs/glfw-3.1.2/: CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/animation/libs/glfw-3.1.2/docs/: Doxyfile  Makefile  cmake_install.cmake
libs/animation/libs/glfw-3.1.2/docs/html/: annotated.html  bug.html  build.html  build_8dox.html  classes.html  compat.html  compat_8dox.html  compile.html  compile_8dox.html  context.html  context_8dox.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  globals_defs_o.html  globals_defs_p.html  globals_defs_r.html  (+56 more)
libs/animation/libs/glfw-3.1.2/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
libs/animation/libs/glfw-3.1.2/src/: Makefile  cmake_install.cmake
libs/animation/libs/glfw-3.1.2/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  title  windows
libs/animation/objects/handle/: handle.mtl
libs/animation/objects/needle/: needle.mtl
libs/animation/share/: simpleShader.vs
libs/animation/src/: animation.cpp  callback_handler.cpp  callback_setter.cpp  camera.cpp  display.cpp  filesystem.cpp  indexed_model.cpp  mesh.cpp  obj_loader.cpp  shader.cpp  texture.cpp  transform.cpp
src/: dynamics_math.cpp  euler_rotations.cpp  handle.cpp  input_trajectory.cpp  rayleigh_ritz_beam.cpp  system_rayleigh_ritz.cpp
